versions/v2.13/modules/en/pages/cluster-deployment/infra-providers/aws/aws.adoc
= Creating an Amazon EC2 Cluster
ifeval::["{build-type}" != "srfa"]
:page-languages: [en, zh]
endif::[]
:revdate: 2026-03-19
:page-revdate: {revdate}
:page-community-path: how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/create-an-amazon-ec2-cluster.adoc 
:page-product-path: cluster-deployment/infra-providers/aws/aws.adoc
:description: Learn the prerequisites and steps required in order for you to create an Amazon EC2 cluster using Rancher
ifeval::["{build-type}" != "community"]
:url-rke2-landing-page: https://documentation.suse.com/cloudnative/rke2/
:url-k3s-landing-page: https://documentation.suse.com/cloudnative/k3s/
:xref-rke2-config: xref:cluster-deployment/configuration/rke2.adoc
:xref-access-cluster-kubectl: xref:cluster-admin/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-infra-providers: xref:cluster-deployment/infra-providers/infra-providers.adoc
:xref-set-up-cloud-providers: xref:cluster-deployment/set-up-cloud-providers/set-up-cloud-providers.adoc
:xref-k3s-config: xref:cluster-deployment/configuration/k3s.adoc
:xref-aws-machine-configuration: xref:cluster-deployment/infra-providers/aws/machine-configuration.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:url-rke2-landing-page: https://docs.rke2.io/
:url-k3s-landing-page: https://docs.k3s.io/
:xref-rke2-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/rke2-cluster-configuration.adoc
:xref-access-cluster-kubectl: xref:how-to-guides/new-user-guides/manage-clusters/access-clusters/use-kubectl-and-kubeconfig.adoc
:xref-infra-providers: xref:how-to-guides/new-user-guides/launch-kubernetes-with-rancher/use-new-nodes-in-an-infra-provider/index.adoc
:xref-set-up-cloud-providers: xref:how-to-guides/new-user-guides/kubernetes-clusters-in-rancher-setup/set-up-cloud-providers/index.adoc
:xref-k3s-config: xref:reference-guides/cluster-configuration/rancher-server-configuration/k3s-cluster-configuration.adoc
:xref-aws-machine-configuration: xref:reference-guides/cluster-configuration/downstream-cluster-configuration/machine-configuration/amazon-ec2.adoc
endif::[]

In this section, you'll learn how to deploy an {url-rke2-landing-page}[RKE2] or {url-k3s-landing-page}[K3s] Kubernetes cluster in Amazon EC2.

First, you set up your EC2 cloud credentials in Rancher.

Then you create an EC2 cluster in Rancher, and when configuring the new cluster, you define machine pools for it. Each machine pool has a Kubernetes role of etcd, controlplane, or worker. Rancher installs Kubernetes on the new nodes, and it sets up each node with the Kubernetes role defined by the machine pool.

== Prerequisites

* *AWS EC2 Access Key and Secret Key* that will be used to create the instances. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_credentials_access-keys.html#Using_CreateAccessKey[Amazon Documentation: Creating Access Keys] how to create an Access Key and Secret Key.
* *IAM Policy created* to add to the user of the Access Key And Secret Key. See https://docs.aws.amazon.com/IAM/latest/UserGuide/access_policies_create.html#access_policies_create-start[Amazon Documentation: Creating IAM Policies (Console)] how to create an IAM policy. See our three example JSON policies below:
 ** <<_example_iam_policy,Example IAM Policy>>
 ** <<_example_iam_policy_with_passrole,Example IAM Policy with PassRole>> (needed if you want to use {xref-set-up-cloud-providers}[Kubernetes Cloud Provider] or want to pass an IAM Profile to an instance)
 ** <<_example_iam_policy_to_allow_encrypted_ebs_volumes,Example IAM Policy to allow encrypted EBS volumes>>
* *IAM Policy added as Permission* to the user. See https://docs.aws.amazon.com/IAM/latest/UserGuide/id_users_change-permissions.html#users_change_permissions-add-console[Amazon Documentation: Adding Permissions to a User (Console)] how to attach it to a user.
* *IPv4-only or IPv6-only or dual-stack subnet and/or VPC* where nodes can be provisioned and assigned IPv4 and/or IPv6 addresses. See https://docs.aws.amazon.com/vpc/latest/userguide/vpc-migrate-ipv6.html[Amazon Documentation: IPv6 support for your VPC].

== Creating an EC2 Cluster

The steps to create a cluster differ based on your Rancher version.

=== Create your cloud credentials

If you already have a set of cloud credentials to use, skip this section.

. Click *☰ > Cluster Management*.
. Click *Cloud Credentials*.
. Click *Create*.
. Click *Amazon*.
. Enter a name for the cloud credential.
. In the *Default Region* field, select the AWS region where your cluster nodes will be located.
. Enter your AWS EC2 *Access Key* and *Secret Key*.
. Click *Create*.

*Result:* You have created the cloud credentials that are used to provision nodes in your cluster.

=== Create your cluster

. Click *☰ > Cluster Management*.
. On the *Clusters* page, click *Create*.
. Toggle the switch to *RKE2/K3s*.
. Click *Amazon EC2*.
. Select a *Cloud Credential*, if more than one exists. Otherwise, it's preselected.
. Enter a *Cluster Name*.
. Create a machine pool for each Kubernetes role. Refer to the {xref-infra-providers}#_node_roles[best practices] for recommendations on role assignments and counts.
 .. For each machine pool, define the machine configuration. Refer to {xref-aws-machine-configuration}[the EC2 machine configuration reference] for information on configuration options.
. Use the *Cluster Configuration* to choose the version of Kubernetes that to install, what network provider to use and if you want to enable project network isolation. For help configuring the cluster, refer to the {xref-rke2-config}[RKE2] and {xref-k3s-config}[K3s] cluster configuration references.
. Use *Member Roles* to configure user authorization for the cluster. Click *Add Member* to add users that can access the cluster. Use the *Role* drop-down to set permissions for each user.
. Click *Create*.

*Result:*

Your cluster is created and assigned a state of *Provisioning*. Rancher is standing up your cluster.

You can access your cluster after its state is updated to *Active*.

*Active* clusters are assigned two Projects:

* `Default`, containing the `default` namespace
* `System`, containing the `cattle-system`, `traefik`, `kube-public`, and `kube-system` namespaces

=== Optional Next Steps

After creating your cluster, you can access it through the Rancher UI. As a best practice, we recommend setting up these alternate ways of accessing your cluster:

* *Access your cluster with the kubectl CLI:* Follow {xref-access-cluster-kubectl}#_accessing_clusters_with_kubectl_from_your_workstation[these steps] to access clusters with kubectl on your workstation. In this case, you will be authenticated through the Rancher server's authentication proxy, then Rancher will connect you to the downstream cluster. This method lets you manage the cluster without the Rancher UI.
* *Access your cluster with the kubectl CLI, using the authorized cluster endpoint:* Follow {xref-access-cluster-kubectl}#_authenticating_directly_with_a_downstream_cluster[these steps] to access your cluster with kubectl directly, without authenticating through Rancher. We recommend setting up this alternative method to access your cluster so that in case you can't connect to Rancher, you can still access the cluster.

== IAM Policies

=== Example IAM Policy

[,json]
----
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "VisualEditor0",
            "Effect": "Allow",
            "Action": [
                "ec2:AuthorizeSecurityGroupIngress",
                "ec2:Describe*",
                "ec2:ImportKeyPair",
                "ec2:CreateKeyPair",
                "ec2:CreateSecurityGroup",
                "ec2:CreateTags",
                "ec2:DeleteKeyPair",
                "ec2:ModifyInstanceMetadataOptions"
            ],
            "Resource": "*"
        },
        {
            "Sid": "VisualEditor1",
            "Effect": "Allow",
            "Action": [
                "ec2:RunInstances"
            ],
            "Resource": [
                "arn:aws:ec2:REGION::image/ami-*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:placement-group/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:subnet/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:key-pair/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:network-interface/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:security-group/*"
            ]
        },
        {
            "Sid": "VisualEditor2",
            "Effect": "Allow",
            "Action": [
                "ec2:RebootInstances",
                "ec2:TerminateInstances",
                "ec2:StartInstances",
                "ec2:StopInstances"
            ],
            "Resource": "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*"
        }
    ]
}
----

=== Example IAM Policy with PassRole

[,json]
----
{
    "Version": "2012-10-17",
    "Statement": [
        {
            "Sid": "VisualEditor0",
            "Effect": "Allow",
            "Action": [
                "ec2:AuthorizeSecurityGroupIngress",
                "ec2:Describe*",
                "ec2:ImportKeyPair",
                "ec2:CreateKeyPair",
                "ec2:CreateSecurityGroup",
                "ec2:CreateTags",
                "ec2:DeleteKeyPair",
                "ec2:ModifyInstanceMetadataOptions"
            ],
            "Resource": "*"
        },
        {
            "Sid": "VisualEditor1",
            "Effect": "Allow",
            "Action": [
                "iam:PassRole",
                "ec2:RunInstances"
            ],
            "Resource": [
                "arn:aws:ec2:REGION::image/ami-*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:placement-group/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:subnet/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:key-pair/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:network-interface/*",
                "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:security-group/*",
                "arn:aws:iam::AWS_ACCOUNT_ID:role/YOUR_ROLE_NAME"
            ]
        },
        {
            "Sid": "VisualEditor2",
            "Effect": "Allow",
            "Action": [
                "ec2:RebootInstances",
                "ec2:TerminateInstances",
                "ec2:StartInstances",
                "ec2:StopInstances"
            ],
            "Resource": "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*"
        }
    ]
}
----

=== Example IAM Policy to allow encrypted EBS volumes

[,json]
----
{
  "Version": "2012-10-17",
  "Statement": [
    {
      "Effect": "Allow",
      "Action": [
        "kms:Decrypt",
        "kms:GenerateDataKeyWithoutPlaintext",
        "kms:Encrypt",
        "kms:DescribeKey",
        "kms:CreateGrant",
        "ec2:DetachVolume",
        "ec2:AttachVolume",
        "ec2:DeleteSnapshot",
        "ec2:DeleteTags",
        "ec2:CreateTags",
        "ec2:CreateVolume",
        "ec2:DeleteVolume",
        "ec2:CreateSnapshot"
      ],
      "Resource": [
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:volume/*",
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:instance/*",
        "arn:aws:ec2:REGION:AWS_ACCOUNT_ID:snapshot/*",
        "arn:aws:kms:REGION:AWS_ACCOUNT_ID:key/KMS_KEY_ID"
      ]
    },
    {
      "Effect": "Allow",
      "Action": [
        "ec2:DescribeInstances",
        "ec2:DescribeTags",
        "ec2:DescribeVolumes",
        "ec2:DescribeSnapshots"
      ],
      "Resource": "*"
    }
  ]
}
----
